--- a/BetDataProvider/BetDataProvider.DataAccess/BetDataProvider.DataAccess.csproj
+++ b/BetDataProvider/BetDataProvider.DataAccess/BetDataProvider.DataAccess.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Models\Contracts\" />
+    <Folder Include="Repositories\Contracts\" />
   </ItemGroup>
 
 </Project>
