--- a/BetDataProvider/BetDataProvider.Web/BetDataProvider.Web.csproj
+++ b/BetDataProvider/BetDataProvider.Web/BetDataProvider.Web.csproj
@@ -10,4 +10,16 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BetDataProvider.Business\BetDataProvider.Business.csproj" />
+    <ProjectReference Include="..\BetDataProvider.DataAccess\BetDataProvider.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
