--- a/BetDataProvider/BetDataProvider.Web/appsettings.json
+++ b/BetDataProvider/BetDataProvider.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server =.; Database = BetDataProvider; Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  }
 }
