--- a/BetDataProvider/BetDataProvider.Business/BetDataProvider.Business.csproj
+++ b/BetDataProvider/BetDataProvider.Business/BetDataProvider.Business.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BetDataProvider.DataAccess\BetDataProvider.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
