--- a/BetDataProvider/BetDataProvider.Business/BetDataProvider.Business.csproj
+++ b/BetDataProvider/BetDataProvider.Business/BetDataProvider.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BetDataProvider.DataAccess\BetDataProvider.DataAccess.csproj" />
   </ItemGroup>
 
