--- a/BetDataProvider/BetDataProvider.Web/appsettings.json
+++ b/BetDataProvider/BetDataProvider.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server =.; Database = BetDataProvider; Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server =.; Database = BetDataProviderTest; Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
