--- a/BetDataProvider/BetDataProvider.Web/appsettings.json
+++ b/BetDataProvider/BetDataProvider.Web/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server =.; Database = BetDataProviderTest; Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server =.; Database = BetDataProvider; Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
