--- a/BetDataProvider/BetDataProvider.Web/Properties/launchSettings.json
+++ b/BetDataProvider/BetDataProvider.Web/Properties/launchSettings.json
@@ -22,6 +22,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7198;http://localhost:5140",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
